<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.user.register.RegisterFragment">

    <LinearLayout
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="1dp"
                    android:paddingVertical="10dp"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="120dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/patient_signup_banner"/>
                    </LinearLayout>

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Doctor"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="32dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="1dp"
                    android:paddingVertical="10dp"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="120dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/doctor_signup_banner"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Doctor"/>
                </LinearLayout>

            </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/sign_up_first_name_hint"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpFirstName"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:hint="@string/sign_up_last_name_hint"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:hint="@string/sign_up_phone_number_hint"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpPhoneNumber"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:hint="@string/sign_up_password_hint"
            app:endIconMode="password_toggle"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/sign_up_doctor_code_hint"
            app:endIconMode="password_toggle"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpDoctorCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_btn"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:paddingVertical="14dp"
            android:backgroundTint="@color/purple_700"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_text"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            />

        <ImageButton
            android:id="@+id/ibLoginWithGoogle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/google_login"
            android:background="@color/white"
            android:layout_marginTop="12dp"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_have_account_text"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                />
            <TextView
                android:id="@+id/tvSignUpLoginBtn"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_Login_btn"
                android:gravity="center"
                android:textColor="#1592E2"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>